@@ -1,3 +1,7 @@
+2010-06-14  David Reitter  <david.reitter@gmail.com>
+
+	* frame.c (do_switch_frame): move frame to the top of Vframe_list.
+
 2010-05-07  Chong Yidong  <cyd@stupidchicken.com>
 
 	* Version 23.2 released.
